# os_KP

./: CMakeLists.txt  README.md
doc/: report.docx
include/: kptools.h
src/: apidemon.cpp  client.cpp  server.cpp
